# gram

./: .dockerignore  .gitignore  .ignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile-gram  Dockerfile-gram-build  Dockerfile-gram-deps  LICENSE.md  MAINTAINERS.md  Makefile  README.md  build.rs  cppcheck-suppressions.txt  grammar.y  install-deps.sh  install.sh  release.sh  toast.yml  which-compiler.sh
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
crate/gram/: Cargo.toml
docker/: Dockerfile-gram  Dockerfile-gram-build  Dockerfile-gram-deps
docs/: 404.md  CNAME  _config.yml  index.md  install.sh
docs/_layouts/: default.html
docs/_sass/: grid.scss
docs/css/: main.scss
docs/docs/: index.md
docs/guide/: index.md
docs/install/: index.md
driver/: main.cpp
examples/: equality.g  factorial.g  girard.g  girard_paradox.g  identity.g  infinite_recursion.g  infinite_type.g  integer.g  propositional_equality.g  symmetry.g  tokens.g
include/: ast.h  compiler.h  error.h  parser.h  platform.h  tokenizer.h  tokens.h  typechecker.h  version.h
media/: logo.sketch
scripts/: check-line-lengths.sh  check-whitespace.sh  count-cores.sh  deploy.sh  get-compiler.sh  install-deps.sh  install-lint-deps.sh  version.sh
spec/: gram.tex
src/: assertions.rs  ast.cpp  ast.h  ast.rs  cli.rs  compiler.cpp  compiler.h  de_bruijn.rs  equality.rs  error.cpp  error.h  error.rs  evaluator.rs  lexer.cpp  lexer.h  main.cpp  main.rs  normalizer.rs  parser.cpp  parser.h  parser.rs  platform.cpp  platform.h  term.rs  token.cpp  token.h  token.rs  tokenizer.cpp  tokenizer.rs  tokens.cpp  tokens.h  type_checker.rs  typechecker.cpp  typer.cpp  typer.h  unifier.rs  version.h
