[package]
name = "gram"
version = "0.0.4"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2021"
description = "A programming language for distributed systems."
license = "MIT"
documentation = "https://github.com/gramlang/gram"
homepage = "https://github.com/gramlang/gram"
repository = "https://github.com/gramlang/gram"
readme = "README.md"

[lints]
clippy.all = "deny"
clippy.default_numeric_fallback = "deny"
clippy.pedantic = "deny"
rust.warnings = "deny"

[dependencies]
colored = "1"
num-bigint = "0.2"
pad = "0.1"
scopeguard = "1"
unicode-segmentation = "1"

[dependencies.clap]
version = "2"
features = ["wrap_help"]
