[package]
name = "gram"
version = "0.0.4"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2024"
description = "A programming language for distributed systems."
license = "MIT"
documentation = "https://github.com/gramlang/gram"
homepage = "https://github.com/gramlang/gram"
repository = "https://github.com/gramlang/gram"
readme = "README.md"

[lints]
clippy.all = { level = "deny", priority = -1 }
clippy.default_numeric_fallback = "deny"
clippy.pedantic = { level = "deny", priority = -1 }
rust.warnings = "deny"

[dependencies]
clap = { version = "4", features = ["wrap_help"] }
clap_complete = "4"
colored = "3"
num-bigint = "0.4"
pad = "0.1"
scopeguard = "1"
unicode-segmentation = "1"
